...
        switch self {
        case .downloads: "Downloads"
        case .blocklist: "Blocklist"
        case .series: "Series"
        case .movies: "Movies"
        case .search: "Search"
        case .more: "More"
        case .missing: "Missing"
        case .calendar: "Calendar"
        case .requests: "Requests"
        case .issues: "Issues"
        case .users: "Users"
        case .jellyfinLibraries: "Libraries"
...
